purchase now hits abgoals

--- a/cog-guestbook/pages/purchase.html
+++ b/cog-guestbook/pages/purchase.html
@@ -11,3 +11,4 @@ We're currently working diligently to make sure the service is secure, and fails
 <cog:validator func="emailaddress" target="email" ><br />Please enter a valid e-mail address</cog:validator> 
 </cog:form>
 </div>
+<cog:abgoal name="purchasetest"></cog:abgoal>
